--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta content="utf-8" http-equiv="encoding" />
 
 		<script src="jquery-3.5.1.min.js"></script>
+		<script src="fuse-6.4.6.min.js"></script>
 		<link href="index.css" rel="stylesheet" type="text/css" />
 		<script src="index.js"></script>
 	</head>
