--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
 		<meta content="utf-8" http-equiv="encoding" />
 
-		<script src="jquery-3.5.1.min.js"></script>
-		<script src="fuse-6.4.6.min.js"></script>
-		<link href="index.css" rel="stylesheet" type="text/css" />
-		<script src="index.js"></script>
+		<script src="./js/jquery-3.5.1.min.js"></script>
+		<script src="./js/fuse-6.4.6.min.js"></script>
+		<link href="./css/index.css" rel="stylesheet" type="text/css" />
+		<script src="./js/index.js"></script>
 	</head>
 	<body>
 		<main>
