--- a/index.html
+++ b/index.html
@@ -1,26 +1,75 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<title>WISS Thing</title>
+   <head>
+      <title>University Search</title>
+      <header>
+      <h1> University Search</h1>
+      <h6> Enter a University or Program</h6>
+      <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+      <meta content="utf-8" http-equiv="encoding" />
+      <script src="./js/jquery-3.5.1.min.js"></script>
+      <script src="./js/fuse-6.4.6.min.js"></script>
+      <link href="./css/index.css" rel="stylesheet" type="text/css" />
+      <script src="./js/index.js"></script>
+   </head>
+   <body>
+      <script>
+         /* When the user clicks on the button,
+         toggle between hiding and showing the dropdown content */
+         function myFunction() {
+           document.getElementById("myDropdown").classList.toggle("show");
+         }
 
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-		<meta content="utf-8" http-equiv="encoding" />
-
-		<script src="./js/jquery-3.5.1.min.js"></script>
-		<script src="./js/fuse-6.4.6.min.js"></script>
-		<link href="./css/index.css" rel="stylesheet" type="text/css" />
-		<script src="./js/index.js"></script>
-	</head>
-	<body>
-		<main>
-			<form id="searchForm">
-				<input type="text" name="searchQuery" id="searchQuery" placeholder="University Name" />
-				<br />
-				<input type="submit" name="submitSearchQuery" id="submitSearchQuery" value="Submit" />
-			</form>
-
-			<div id="searchResult"></div>
-		</main>
-	</body>
+         // Close the dropdown if the user clicks outside of it
+         window.onclick = function(event) {
+           if (!event.target.matches('.dropbtn')) {
+             var dropdowns = document.getElementsByClassName("dropdown-content");
+             var i;
+             for (i = 0; i < dropdowns.length; i++) {
+               var openDropdown = dropdowns[i];
+               if (openDropdown.classList.contains('show')) {
+                 openDropdown.classList.remove('show');
+               }
+             }
+           }
+         }
+      </script>
+      <main>
+         <form id="searchForm">
+            <input type="text" name="searchQuery" id="searchQuery" placeholder="University/Program Name" />
+            <br />
+            <br>
+            <input type="submit" name="submitSearchQuery" id="submitSearchQuery" value="Submit" />
+         </form>
+         <div id="searchResult"></div>
+      </main>
+      <br>
+      List of Universities and Programs
+      <ul>
+         <li> University of Toronto</li>
+         <ul>
+            <li> Architecture</li>
+            <li> Life Sciences</li>
+            <li> Visual and Preforming Arts</li>
+            <li> Computer Science</li>
+            <li> Management and International Business</li>
+         </ul>
+         <li> University of Waterloo</li>
+         <ul>
+            <li> Architecture</li>
+            <li> Life Sciences</li>
+            <li> Mechanical Engineering</li>
+            <li> Computer Engineering</li>
+            <li> Global Business and Digital Arts</li>
+         </ul>
+         <li> McMaster University</li>
+         <ul>
+            <li> Music</li>
+            <li> Life Science</li>
+            <li> Economics</li>
+            <li> Computer Science</li>
+            <li> Business</li>
+         </ul>
+      </ul>
+   </body>
 </html>
