--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          <ul>
             <li> Architecture</li>
             <li> Life Sciences</li>
-            <li> Visual and Preforming Arts</li>
+            <li> Visual and Performing Arts</li>
             <li> Computer Science</li>
             <li> Management and International Business</li>
          </ul>
